--- a/views/contact-success.ejs
+++ b/views/contact-success.ejs
@@ -13,16 +13,8 @@
     <body>
         <% include partials/nav.ejs %>
         <h1> Contact me! </h1>
-        <p> You can contact me at +91 9876543210... </p>
-
-        <form id="contact-form" method="POST" action="/contact">
-            <label for="who">Who do you want to contact?</label>
-            <input type="text" name ="who" value="<%= qs.person %>"/> <!-- access the query params -->
-            <label for="department">Which department?</label>
-            <input type="text" name="department" value="<%= qs.dept %>"/> <!-- access the query params -->
-            <label for="email">Your email</label>
-            <input type="text" name="email" />
-            <input type="submit" value="submit" />
-        </form>
+        <p> Thanks for getting in touch! </p>
+        <p> You contacted <%= data.who %> in the <%= data.department %> department. </p>
+        <p> We will reply to you at <%= data.email %></p>
     </body>
 </html>
